--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aryan Dhiman | Portfolio | Web Developer in Ambala | Mobile App Developer in Ambala</title>
-    <link rel="stylesheet" href="output.css" />
+    <link rel="stylesheet" href="./src/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
-    <link rel="preload" href="./javascript/manipulator.js" as="script">
+    <!-- <link rel="preload" href="./javascript/manipulator.js" as="script"> -->
     <meta name="description"
         content="Hello, i'm Aryan Dhiman. I am 21 years old. I am a mern-stack web developer and mobile application developer from Ambala Cantt. I am currently pursuing my bachelors in Computer Science from University Institute of Enginnering and Technology, kurukshetra university, kurukshetra (UIET-kurukshetra). I can create dynamic,engaging and scalable websites and mobile applications providing security through hashing mechanisms. I can turn your imaginative ideas into digital solution.">
 </head>
@@ -754,6 +754,6 @@
         loop: true,
     });
 </script>
-<script src="./javascript/manipulator.js"></script>
+<script src="./src/javascript/manipulator.js"></script>
 
 </html>
