changed age,image background color

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <!-- <link rel="preload" href="./javascript/manipulator.js" as="script"> -->
     <meta name="description"
-        content="Hello, i'm Aryan Dhiman. I am 21 years old. I am a mern-stack web developer and mobile application developer from Ambala Cantt. I am currently pursuing my bachelors in Computer Science from University Institute of Enginnering and Technology, kurukshetra university, kurukshetra (UIET-kurukshetra). I can create dynamic,engaging and scalable websites and mobile applications providing security through hashing mechanisms. I can turn your imaginative ideas into digital solution.">
+        content="Hello, i'm Aryan Dhiman. I am 22 years old. I am a mern-stack web developer and mobile application developer from Ambala Cantt. I am currently pursuing my bachelors in Computer Science from University Institute of Enginnering and Technology, kurukshetra university, kurukshetra (UIET-kurukshetra). I can create dynamic,engaging and scalable websites and mobile applications providing security through hashing mechanisms. I can turn your imaginative ideas into digital solution.">
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <link rel="stylesheet" href="index.css">
 
@@ -201,7 +201,7 @@
                     About Me
                 </div>
                 <div class="desc">
-                    Hello, i'm Aryan Dhiman. I am 21 years old. I am a mern-stack web developer and mobile
+                    Hello, i'm Aryan Dhiman. I am 22 years old. I am a mern-stack web developer and mobile
                     application developer from Ambala Cantt. I am currently pursuing my Bachelors in Computer
                     Science from University Institute of Enginnering and Technology, kurukshetra university,
                     kurukshetra (UIET-kurukshetra). I can create dynamic, engaging and scalable web and mobile
@@ -303,9 +303,9 @@
                     </svg>
                 </div>
             </div>
-            <div class="w-[40%] mx-auto sm:flex sm:justify-center mt-5  ">
-                <img class="rounded border-2 border-[#485189] my-auto" src="../assets/images/aryan.png" height="100"
-                    width="300" alt="">
+            <div class="w-[40%] mx-auto sm:flex sm:justify-center mt-5 ">
+                <img class="border-2 border-[#485189] my-auto" src="../assets/images/aryan.png" height="100"
+                    width="300" alt="" style="border-radius: 100px;background-color:#ccdfff;">
                 <!-- cross button -->
 
             </div>
